# RedNeuronal

./: README.md  pyproject.toml  red neuronal basica.ipynb
